added last updated

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,3 +50,6 @@ extra_css:
 
 repo_url: https://github.com/ashiccloud/piracylinkarchive.git
 
+plugins:
+  - search
+  - git-revision-date-localized
